# backend

./: Cargo.toml  LICENSE  README.md  api_spec.md  response.json
.github/workflows/: CI.yml
scripts/: CI.bash  fil-spid.bash  registration.bash
src/: auth.rs  config.rs  errors.rs  get.rs  lib.rs  main.rs  post.rs  redis.rs  storage.rs  vote_registration.rs  vote_start.rs  votes.rs
src/messages/: auth.rs  vote_registration.rs  vote_start.rs  votes.rs
