[package]
name = "fip-voting"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# WEB DEP
actix-web = "4.3.1"
url = "2.3.1"

# DB DEP
redis = "0.23.0"

# CRYPTO DEP
ic-verify-bls-signature = { version = "0.2.0", git = " https://github.com/dfinity/verify-bls-signatures" }
bls12_381 = { version = "0.8", default-features = false, features = ["groups", "pairings", "alloc", "experimental"] }
k256 = {version = "0.13.1", features = ["ecdsa", "ecdsa-core"] }
sha2 = "0.10.6"
sha3 = "0.10.8"

# MISC
thiserror = "1.0.40"
hex = "0.4.3"
base64 = "0.21.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
rand = "0.8.5"
