[package]
name = "fip-voting"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# WEB DEP
actix-web = "4.3.1"
url = "2.3.1"
reqwest = { version = "0.11.18", features = ["json"] }

# DB DEP
redis = "0.23.0"

# CRYPTO DEP
bls-signatures = { version = "0.14.0", git = "https://github.com/filecoin-project/bls-signatures" }
ethers = { version = "2.0.7" }

# SERIALIZATION DEP
hex = "0.4.3"
base64 = "0.21.2"
base32 = "0.4.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
jsonrpc = "0.15.0"

# MISC
regex = "1.8.3"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
